# LevyInsuranceCopulaQplot

./: .gitignore  CMakeLists.txt  Copulas_graphs.py  LICENSE  README.md  clayton_model  clayton_optimized  copula_calculations.cpp  debug_q_surface.py  eta1_theta2_p2.csv  optimizer  plot_q_normalized.py  pyproject.toml  test_q_value.py  try2.cpp
levy_copula_pricing/: __init__.py  python_interface.py
